--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./src/img/fot.png" alt="">
         </div>
         <div id="other">
-            <img src="./src/img/nofav.png" alt="">
+            <img src="./src/img/nofav.png" alt="" id="fav">
             <img src="./src/img/sale.png" alt="" id="bascet">
         </div>
     </header>
@@ -32,9 +32,12 @@
             </div>
         </div>
     </div>
-    <h4 id="h4">RECOMENDED</h4>
-    <div id="content">
+    <div id="favDiv">
+        <div id="favElem" class="item">
+        </div>
     </div>
+    <h4 id="h4">RECOMENDED</h4>
+    <div id="content"><div id="perfumes" class="item"></div></div>
     </div>
     
     <script src="./build/bundle.js"></script>
